src/tui/render/snapshots/frame__tui__render__help_overlay__tests__help_detail_view.snap
---
source: src/tui/render/help_overlay.rs
expression: output
---

   ┌───────────────────────────────────────────────────────────────────────┐
   │ Key Bindings                                                          │
   │                                                                       │
   │ Navigation                           Edit                             │
   │ ▲▼/jk      Move between regions      e/Enter    Edit region / open sub│
   │ Tab/S-Tab  Next / prev region        t          Edit tags             │
   │ g/G        Top / bottom              @          Edit refs             │
   │ Esc        Back / close              d          Edit deps             │
   │                                      n/N        Edit note             │
   │ Task State                           w/Alt+w    Toggle note wrap      │
   │ Space      Cycle state               y          Copy task md          │
   │ x          Mark done                                                  │
   │ o          Set todo                  Other                            │
   │ b          Set blocked               /          Search                │
   │ ~          Set parked                >          Command palette       │
   │ c          Toggle cc tag             J          Jump to task          │
   │ M          Move to track             D          Show deps             │
   │                                      .          Repeat last action    │
   │ Views                                T          Tag colors            │
   │                                                                       │
   │ [>] frame v0.2.0                          github.com/joshsegall/frame │
   └ ▼ ────────────────────────────────────────────────────────────────────┘
