src/tui/render/snapshots/frame__tui__render__help_overlay__tests__help_fits_without_scroll.snap
---
source: src/tui/render/help_overlay.rs
expression: output
---










   ┌───────────────────────────────────────────────────────────────────────┐
   │ Key Bindings                                                          │
   │                                                                       │
   │ Navigation                           Edit                             │
   │ ▲▼/jk      Move up/down              e          Edit title            │
   │ ◀/h        Collapse / parent         t          Edit tags             │
   │ ▶/l        Expand / child            a          Add task (bottom)     │
   │ g/G        Top / bottom              =          Append to group       │
   │ Enter      Open detail               -          Insert after cursor   │
   │ Esc        Back / close              p          Push to top           │
   │                                      A          Add subtask           │
   │ Task State                           m          Move mode             │
   │ Space      Cycle state               M          Move to track         │
   │ o          Set todo                                                   │
   │ x          Mark done                 Select (v)                       │
   │ b          Set blocked               v          Toggle select         │
   │ ~          Set parked                V          Range select          │
   │ c          Toggle cc tag             Ctrl+A     Select all            │
   │                                      N          Select none           │
   │ Filter (f+key)                       x/b/o/~    Bulk state            │
   │ fa         Active only               t/d/m/M    Bulk tag/dep/move     │
   │ fo         Todo only                                                  │
   │ fb         Blocked only              Other                            │
   │ fp         Parked only               /          Search                │
   │ fr         Ready (deps met)          >          Command palette       │
   │ ft         Filter by tag             J          Jump to task          │
   │ f Space    Clear state filter        D          Show deps             │
   │ ff         Clear all filters         C          Set cc-focus          │
   │                                      .          Repeat last action    │
   │ Views                                T          Tag colors            │
   │ 1-9        Track N                   P          Projects              │
   │ Tab/S-Tab  Prev / next view          z/u        Undo                  │
   │ 0/`        Tracks overview           Z          Redo                  │
   │ i          Inbox                     ?          Help                  │
   │ r          Recent                    QQ         Quit                  │
   │ K          Board                                                      │
   │ S          Project search                                             │
   │                                                                       │
   │ [>] frame v0.2.0                          github.com/joshsegall/frame │
   └───────────────────────────────────────────────────────────────────────┘
