src/tui/render/snapshots/frame__tui__render__help_overlay__tests__help_short_terminal.snap
---
source: src/tui/render/help_overlay.rs
expression: output
---

   ┌───────────────────────────────────────────────────────────────────────┐
   │ Key Bindings                                                          │
   │                                                                       │
   │                                                                       │
   │ [>] frame v0.2.0                          github.com/joshsegall/frame │
   └ ▼ ────────────────────────────────────────────────────────────────────┘
